// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chat /> renders a basic chat 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
  list-style: none;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.25;
}

.emotion-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  padding: 0.5rem;
  border-radius: 0.75rem;
  outline: 0;
  max-width: 60%;
  color: black;
  background-color: gainsboro;
  box-sizing: border-box;
}

.emotion-2 + li {
  margin-top: 0.5rem;
}

.emotion-2:active time {
  display: block;
}

.emotion-0 {
  display: block;
  quotes: none;
}

<ol
  className="emotion-4 emotion-5"
>
  <li
    className="emotion-2 emotion-3"
    tabIndex={null}
  >
    <q
      className="emotion-0 emotion-1"
    >
      O HAI! 👋🏼
    </q>
  </li>
</ol>
`;

exports[`<Chat /> renders a full-featured chat 1`] = `
.emotion-58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
  list-style: none;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.25;
}

.emotion-6 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  padding: 0.5rem;
  border-radius: 0.75rem;
  outline: 0;
  max-width: 60%;
  color: black;
  background-color: gainsboro;
  box-sizing: border-box;
}

.emotion-6 + li {
  margin-top: 0.5rem;
}

.emotion-6:active time {
  display: block;
}

.emotion-2 {
  display: block;
  quotes: none;
}

.emotion-0 {
  display: block;
  margin-bottom: 0.25em;
  font-size: 0.75rem;
  font-weight: bold;
}

.emotion-4 {
  display: none;
  position: absolute;
  top: 100%;
  left: 0.666667em;
  margin-top: 0.25em;
  text-align: left;
  font-size: 0.75rem;
  color: gray;
  opacity: 0.75;
  white-space: nowrap;
}

.emotion-14 {
  position: relative;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding: 0.5rem;
  border-radius: 0.75rem;
  outline: 0;
  max-width: 60%;
  color: white;
  background-color: dodgerblue;
  box-sizing: border-box;
}

.emotion-14 + li {
  margin-top: 0.5rem;
}

.emotion-14:active time {
  display: block;
}

.emotion-12 {
  display: none;
  position: absolute;
  top: 100%;
  right: 0.666667em;
  margin-top: 0.25em;
  text-align: right;
  font-size: 0.75rem;
  color: gray;
  opacity: 0.75;
  white-space: nowrap;
}

.emotion-32 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0.5rem 0;
  text-align: center;
  max-width: 80%;
  font-size: 0.75rem;
  font-weight: bold;
  color: gray;
}

.emotion-32 i {
  font-style: normal;
}

.emotion-56 {
  position: relative;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding: 0.5rem;
  border-radius: 0.75rem;
  outline: 0;
  max-width: 60%;
  color: white;
  background-color: dodgerblue;
  box-sizing: border-box;
  padding: 0;
  font-size: 4em;
  background-color: transparent;
}

.emotion-56 + li {
  margin-top: 0.5rem;
}

.emotion-56:active time {
  display: block;
}

.emotion-50 {
  display: none;
  margin-bottom: 0.25em;
  font-size: 0.75rem;
  font-weight: bold;
}

<ol
  className="emotion-58 emotion-59"
>
  <li
    className="emotion-6 emotion-7"
    tabIndex="0"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Costello
    </span>
    <q
      className="emotion-2 emotion-3"
    >
      Look, you gotta first baseman?
    </q>
    <time
      className="emotion-4 emotion-5"
      dateTime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    className="emotion-14 emotion-7"
    tabIndex="0"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Abbott
    </span>
    <q
      className="emotion-2 emotion-3"
    >
      Certainly.
    </q>
    <time
      className="emotion-12 emotion-5"
      dateTime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    className="emotion-6 emotion-7"
    tabIndex="0"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Costello
    </span>
    <q
      className="emotion-2 emotion-3"
    >
      Who’s playing first?
    </q>
    <time
      className="emotion-4 emotion-5"
      dateTime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    className="emotion-14 emotion-7"
    tabIndex="0"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Abbott
    </span>
    <q
      className="emotion-2 emotion-3"
    >
      That’s right.
    </q>
    <time
      className="emotion-12 emotion-5"
      dateTime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    className="emotion-32 emotion-33"
  >
    Costello becomes exasperated.
  </li>
  <li
    className="emotion-6 emotion-7"
    tabIndex="0"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Costello
    </span>
    <q
      className="emotion-2 emotion-3"
    >
      When you pay off the first baseman every month, who gets the money?
    </q>
    <time
      className="emotion-4 emotion-5"
      dateTime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    className="emotion-14 emotion-7"
    tabIndex="0"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Abbott
    </span>
    <q
      className="emotion-2 emotion-3"
    >
      Every dollar of it.
    </q>
    <time
      className="emotion-12 emotion-5"
      dateTime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    className="emotion-56 emotion-57"
    tabIndex="0"
  >
    <span
      className="emotion-50 emotion-1"
      hidden={true}
    >
      Abbott
    </span>
    <q
      className="emotion-2 emotion-3"
    >
      😁
    </q>
    <time
      className="emotion-12 emotion-5"
      dateTime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
</ol>
`;

exports[`<Chat /> renders no chat by default 1`] = `null`;
